--- a/messages.html
+++ b/messages.html
@@ -24,9 +24,21 @@
     <h2>Inbox</h2>
 
     <table class="messages">
-      <tr><td class="card"><strong>Harvey Specter</strong><br /><span class="muted">Can you review the deck?</span></td></tr>
-      <tr><td class="card"><strong>Rachel Zane</strong><br /><span class="muted">Shared the carousel.</span></td></tr>
-      <tr><td class="card"><strong>Michael Ross</strong><br /><span class="muted">Agenda attached.</span></td></tr>
+    <tr>
+        <td class="card">
+            <strong>Harvey Specter</strong><br /><span class="muted">Can you review the deck?</span>
+        </td>
+    </tr>
+    <tr>
+        <td class="card">
+            <strong>Rachel Zane</strong><br /><span class="muted">Shared the attachment.</span>
+        </td>
+    </tr>
+    <tr>
+        <td class="card">
+            <strong>Michael Ross</strong><br /><span class="muted">Agenda attached.</span>
+        </td>
+    </tr>
     </table>
 
     <div class="card">
