--- a/feed.html
+++ b/feed.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Intellica | Feed</title>
   <link rel="stylesheet" href="styles.css" />
+      <script src="../script.js" defer></script>
+
 </head>
 <body class="dark-bg">
 
@@ -87,6 +89,7 @@
       </tr>
     </table>
   </main>
+<script src="script.js"></script>
 
 </body>
 </html>
