--- a/messages.html
+++ b/messages.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Intellica | Messages</title>
   <link rel="stylesheet" href="styles.css" />
+      <script src="../script.js" defer></script>
+
 </head>
 <body class="dark-bg">
 
@@ -49,6 +51,7 @@
       </form>
     </div>
   </main>
+<script src="script.js"></script>
 
 </body>
 </html>
