--- a/network.html
+++ b/network.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Intellica | Network</title>
   <link rel="stylesheet" href="styles.css" />
+      <script src="../script.js" defer></script>
+
 </head>
 <body class="dark-bg">
 
@@ -44,6 +46,6 @@
         <button class="connect-btn">Connect</button>
     </div>
 </div>
-
+<script src="script.js"></script>
 </body>
 </html>
